feat: add username field to Kandidat model and update related methods for candidate creation and login
